Fixed a naming issue. The text now does not overlap.

--- a/client/src/app/hunts/hunt-card.component.scss
+++ b/client/src/app/hunts/hunt-card.component.scss
@@ -114,6 +114,6 @@
     margin-right: 60px;
   }
 
-  .hunt-card-description {
+  .hunt-card-name {
     margin-right: 60px;
   }
